Add browser commands for next and previous tab

--- a/app/popup.html
+++ b/app/popup.html
@@ -11,7 +11,8 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
+    <h1>'Allo, 'Allo sasdfasdf asdfasd!</h1>
+    <a href="options.html" target="_blank">options page</a>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
