Wired up emitterCommand.

--- a/app/popup.html
+++ b/app/popup.html
@@ -15,6 +15,7 @@
     <a href="options.html" target="_blank">options page</a>
 
     <button id="sendHelloButton">Send hello message to content script</button>
+    <button id="sendZoom">Send Zoom</button>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -24,6 +25,7 @@
     <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
     <script src="scripts/messageEmitter.js"></script>
+    <script src="scripts/emitterCommand.js"></script>
     <!-- endbuild -->
   </body>
 </html>
