buttons are configurable and turn into actions
when buttons are bound using the popup, pressing those buttons fires the bound extension event.  every action can only have one button, every button can only have one action.  Edge cases are not handled by the binding screen at the moment.

--- a/app/popup.html
+++ b/app/popup.html
@@ -10,10 +10,9 @@
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
   </head>
-  <body>
-    <h1>'Allo, 'Allo!</h1>
-
+  <body style="width: 500px;">
     <!-- build:js scripts/vendor.js -->
+    <script src="scripts/vendor/jquery-2.1.3.min.js"></script>
     <!-- bower:js -->
     <!-- endbower -->
     <!-- endbuild -->
@@ -21,5 +20,71 @@
     <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
     <!-- endbuild -->
+
+    <div id="up">
+      <label>up</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="left">
+      <label>left</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="right">
+      <label>right</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="down">
+      <label>down</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="forward">
+      <label>forward</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="back">
+      <label>back</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="next-tab">
+      <label>next tab</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="prev-tab">
+      <label>previous tab</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="confirm">
+      <label>confirm</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="cancel">
+      <label>cancel</label>
+      <span></span>
+      <button>bind</button>
+    </div>
+
+    <div id="home">
+      <label>home</label>
+      <span></span>
+      <button>bind</button>
+    </div>
   </body>
 </html>
