Added support for navigating forwards and backwards in the browser using messaging with an emitterCommand.

--- a/app/popup.html
+++ b/app/popup.html
@@ -15,8 +15,8 @@
     <a href="options.html" target="_blank">options page</a>
 
     <button id="sendHelloButton">Send hello message to content script</button>
-    <button id="sendZoom">Send Zoom</button>
-
+    <button id="navigateForward">Nav Forward</button>
+    <button id="navigateBackward">Nav Back</button>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
