--- a/app/popup.html
+++ b/app/popup.html
@@ -22,6 +22,7 @@
       <button id="sendHelloButton">Send hello message to content script</button>
       <button id="navigateForward">Nav Forward</button>
       <button id="navigateBackward">Nav Back</button>
+      <button id="fullScreen">Fullscreen</button>
     </div>
 
     <!-- build:js scripts/vendor.js -->
