added controller image to popup-html

--- a/app/popup.html
+++ b/app/popup.html
@@ -12,7 +12,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>chrome-controller</h1>
+    <h1><img src = 'images/Chrome_Controller_38.png'> Chrome Controller</h1>
     <a href="options.html" target="_blank">options page</a>
 
     <button id="clearStorage">Clear</button>
