Added command for active tab reload.

--- a/app/popup.html
+++ b/app/popup.html
@@ -65,7 +65,11 @@
       <div></div>
       <button>bind</button>
     </div>
-
+    <div id="active-tab-reload" class="binding-container">
+      <label>active tab reload</label>
+      <div></div>
+      <button>bind</button>
+    </div>
     <div id="next-tab" class="binding-container">
       <label>next tab</label>
       <div></div>
