put in keyboard input

--- a/app/popup.html
+++ b/app/popup.html
@@ -100,6 +100,62 @@
       <button>bind</button>
     </div>
 
+    <h3>Keyboard Bindings</h3>
+
+    <div id="toggle-keyboard" class="binding-container">
+      <label>toggle keyboard</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-up" class="binding-container">
+      <label>up</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-left" class="binding-container">
+      <label>left</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-right" class="binding-container">
+      <label>right</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-down" class="binding-container">
+      <label>down</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-north" class="binding-container">
+      <label>north input</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-west" class="binding-container">
+      <label>west input</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-east" class="binding-container">
+      <label>east input</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
+    <div id="keyboard-south" class="binding-container">
+      <label>south input</label>
+      <div></div>
+      <button>bind</button>
+    </div>
+
     <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
     <script src="scripts/messageEmitter.js"></script>
