--- a/app/popup.html
+++ b/app/popup.html
@@ -30,75 +30,109 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <div id="up" class="binding-container">
-      <label>up</label>
+    <div id="pageElements" class="group-container">
+      <label>Page Element Navigation</label>
       <div></div>
-      <button>bind</button>
+
+      <div id="up" class="binding-container">
+        <label>Up</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="left" class="binding-container">
+        <label>Left</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="right" class="binding-container">
+        <label>Right</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="down" class="binding-container">
+        <label>Down</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="confirm" class="binding-container">
+        <label>Click/Confirm</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="cancel" class="binding-container">
+        <label>Cancel</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
     </div>
 
-    <div id="left" class="binding-container">
-      <label>left</label>
+    <div id="browserScrolling" class="group-container">
+      <label>Browser Scrolling</label>
       <div></div>
-      <button>bind</button>
+
+      <div id="scroll-vertical" class="binding-container">
+        <label>Bind an axis to vertical scrolling</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="scroll-horizontal" class="binding-container">
+        <label>Bind an axis to horizontal scrolling</label>
+        <div></div>
+        <button>bind</button>
+      </div>
     </div>
 
-    <div id="right" class="binding-container">
-      <label>right</label>
+    <div id="browserCommands" class="group-container">
+      <label>Browser Commands and Navigation</label>
       <div></div>
-      <button>bind</button>
+
+      <div id="forward" class="binding-container">
+        <label>Forward (Browser Forward Button)</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="back" class="binding-container">
+        <label>Back (Browser Back Button)</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="active-tab-reload" class="binding-container">
+        <label>Reload the Current Page</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="next-tab" class="binding-container">
+        <label>Next Tab (Select the Tab to the Right)</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="prev-tab" class="binding-container">
+        <label>Previous Tab (Select the Tab to the Left)</label>
+        <div></div>
+        <button>bind</button>
+      </div>
+
+      <div id="home" class="binding-container">
+        <label>Home (Load your Home Page)</label>
+        <div></div>
+        <button>bind</button>
+    </div>
     </div>
 
-    <div id="down" class="binding-container">
-      <label>down</label>
-      <div></div>
-      <button>bind</button>
-    </div>
 
-    <div id="forward" class="binding-container">
-      <label>forward</label>
-      <div></div>
-      <button>bind</button>
-    </div>
 
-    <div id="back" class="binding-container">
-      <label>back</label>
-      <div></div>
-      <button>bind</button>
-    </div>
-    <div id="active-tab-reload" class="binding-container">
-      <label>active tab reload</label>
-      <div></div>
-      <button>bind</button>
-    </div>
-    <div id="next-tab" class="binding-container">
-      <label>next tab</label>
-      <div></div>
-      <button>bind</button>
-    </div>
 
-    <div id="prev-tab" class="binding-container">
-      <label>previous tab</label>
-      <div></div>
-      <button>bind</button>
-    </div>
-
-    <div id="confirm" class="binding-container">
-      <label>confirm</label>
-      <div></div>
-      <button>bind</button>
-    </div>
-
-    <div id="cancel" class="binding-container">
-      <label>cancel</label>
-      <div></div>
-      <button>bind</button>
-    </div>
-
-    <div id="home" class="binding-container">
-      <label>home</label>
-      <div></div>
-      <button>bind</button>
-    </div>
 
     <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
