added missing js file link to popup.html

--- a/app/popup.html
+++ b/app/popup.html
@@ -129,6 +129,7 @@
     <script src="scripts/messageEmitter.js"></script>
     <script src="scripts/emitterCommand.js"></script>
     <script src="scripts/clientScripts/elementDistance.js"></script>
+    <script src="scripts/clientScripts/elementVisibility.js"></script>
     <script src= "scripts/clientScripts/focusableElements.js"></script>
     <script src="scripts/clientScripts/contentscript.js"></script>
     <script src="scripts/clientScripts/focusClientCommand.js"></script>
