added binding and controller for close current tab

--- a/app/popup.html
+++ b/app/popup.html
@@ -117,7 +117,13 @@
         <label>Open a New Tab</label>
         <div></div>
         <button>bind</button>
-      </div>    
+      </div>  
+
+      <div id="close-tab" class="binding-container">
+        <label>Close Current Tab</label>
+        <div></div>
+        <button>bind</button>
+      </div>   
     </div>
 
 
