--- a/app/popup.html
+++ b/app/popup.html
@@ -141,11 +141,13 @@
     <script src="scripts/messageEmitter.js"></script>
     <script src="scripts/emitterCommand.js"></script>
     <script src="scripts/clientScripts/elementDistance.js"></script>
+    <script src= "scripts/clientScripts/elementVisibility.js"></script>
     <script src= "scripts/clientScripts/focusableElements.js"></script>
     <script src="scripts/clientScripts/contentscript.js"></script>
     <script src="scripts/clientScripts/focusClientCommand.js"></script>
     <script src="scripts/clientScripts/browserNavigationClientCommand.js"></script>
     <script src="scripts/clientScripts/selectClientCommand.js"></script>
+    <script src="scripts/clientScripts/scrollClientCommand.js"></script>
     <script src="scripts/clientScripts/commandFactory.js"></script>
     <script src="scripts/clientScripts/browserFullScreenClientCommand.js"></script>
     <!-- endbuild -->
